content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -1,7 +1,12 @@
-
-
+---
+title: ’きたかぜとたいよう'
+date: 2020-08-04
+category: '히라카나'
+draft: false
+---
+![]()
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTcxODA2NzIyNF19
 -->
