content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -5,11 +5,30 @@ category: '히라카나'
 draft: false
 ---
 ![](https://i.ibb.co/0qY4TGm/7.jpg =300x)
+```js
+きたかぜとたいよう
+そら
+もうすぐ ふりがきます。きたかぜ はとくいそうに かぜをふきつけ ました。空の くもがふきとび、と りたちもとおくにとばされました。 - 「わははは...。だれも わしの力に」 は かなうまい。この空で 「ばんな のは わしだ!」
+ちから
+そらい
+
+
+```
 ![](https://i.ibb.co/Z2LyPzg/8.jpg =300x)
+```js
+ちから一
+日すると、 、 たいようが
+しずかに いいました。 「うん。きみの 力は すごい。 でも、一ばんとはおもわないよ。」 「じゃあ、力くらべだ!」
+ちょうど のはらの 一本みちを たび人が やってくるのが 見えました。
+いち
+いっぽん
+びと」
+
+```
 ![](https://i.ibb.co/82HpJXc/9.jpg =300x)
 ![](https://i.ibb.co/sRKVH9p/10.jpg =300x)
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyMDA1NzA1OV19
+eyJoaXN0b3J5IjpbMjA1ODk2ODA2Nl19
 -->
