content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -26,9 +26,28 @@ draft: false
 
 ```
 ![](https://i.ibb.co/82HpJXc/9.jpg =300x)
+```js
+「あの男を
+はだかに
+したほうが
+Strecited
+おおおお
+なお品です!
+びと
+かちだ。」 「うん。きみから はじめて いいよ。」
+ビュー! きたかぜは たび人の マントを とばそうと、かぜを ふき つけます。あわててたび人は手で
+ま
+ん
+と
+ま
+ん
+と
+マントをしっかりとおさえました。
+
+```
 ![](https://i.ibb.co/sRKVH9p/10.jpg =300x)
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1ODk2ODA2Nl19
+eyJoaXN0b3J5IjpbMTU1Nzc2NjE3OV19
 -->
