content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -45,9 +45,20 @@ Strecited
 マントをしっかりとおさえました。
 
 ```
+일본어 10
 ![](https://i.ibb.co/sRKVH9p/10.jpg =300x)
+```js
+「きたかぜは
+ますます。
+つよくふきました。
+でも、せなかを まるめた たび人の マントをぬがす。 
+ことが、どうしても できません。 「こんどは ぼくの ばんだよ。」
+たいようがあたたかい ひかりで たび人を あたためはじめました。
+びと
+
+```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1Nzc2NjE3OV19
+eyJoaXN0b3J5IjpbMTU3MjAwNDExNF19
 -->
