content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -16,13 +16,12 @@ draft: false
 ```
 ![](https://i.ibb.co/Z2LyPzg/8.jpg =300x)
 ```js
-ちから一
-日すると、 、 たいようが
-しずかに いいました。 「うん。きみの 力は すごい。 でも、一ばんとはおもわないよ。」 「じゃあ、力くらべだ!」
+すると、 、 たいようが
+しずかに いいました。 「うん。きみの 力は すごい。 
+でも、一ばんとはおもわないよ。」 「じゃあ、力くらべだ!」
 ちょうど のはらの 一本みちを たび人が やってくるのが 見えました。
 いち
-いっぽん
-びと」
+
 
 ```
 ![](https://i.ibb.co/82HpJXc/9.jpg =300x)
@@ -32,13 +31,8 @@ draft: false
 したほうが
 
 かちだ。」 「うん。きみから はじめて いいよ。」
-ビュー! きたかぜは たび人の マントを とばそうと、かぜを ふき つけます。あわててたび人は手で
-ま
-ん
-と
-ま
-ん
-と
+ビュー! きたかぜは たび人の マントを とばそうと、
+かぜを ふき つけます。あわててたび人は手で
 マントをしっかりとおさえました。
 
 ```
@@ -57,5 +51,5 @@ draft: false
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDg3MzkyNjBdfQ==
+eyJoaXN0b3J5IjpbMTM0NDU0MTldfQ==
 -->
