content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -7,8 +7,10 @@ draft: false
 ![](https://i.ibb.co/0qY4TGm/7.jpg =300x)
 ```js
 きたかぜとたいよう
-そら
-もうすぐ ふりがきます。きたかぜ はとくいそうに かぜをふきつけ ました。空の くもがふきとび、と りたちもとおくにとばされました。 - 「わははは...。だれも わしの力に」 は かなうまい。この空で 「ばんな のは わしだ!」
+もうすぐ ふりがきます。きたかぜ 
+は とくいそうに かぜを ふきつけ 
+ました。空の くもが ふきとび、と 
+りたちも とおくにとばされました。 - 「わははは...。だれも わしの力に」 は かなうまい。この空で 「ばんな のは わしだ!」
 ちから
 そらい
 
@@ -20,9 +22,6 @@ draft: false
 しずかに いいました。 「うん。きみの 力は すごい。 
 でも、一ばんとはおもわないよ。」 「じゃあ、力くらべだ!」
 ちょうど のはらの 一本みちを たび人が やってくるのが 見えました。
-いち
-
-
 ```
 ![](https://i.ibb.co/82HpJXc/9.jpg =300x)
 ```js
@@ -51,5 +50,5 @@ draft: false
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM0NDU0MTldfQ==
+eyJoaXN0b3J5IjpbMTMwMTA0NzA2Ml19
 -->
