content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -10,11 +10,10 @@ draft: false
 もうすぐ ふりがきます。きたかぜ 
 は とくいそうに かぜを ふきつけ 
 ました。空の くもが ふきとび、と 
-りたちも とおくにとばされました。 - 「わははは...。だれも わしの力に」 は かなうまい。この空で 「ばんな のは わしだ!」
-ちから
-そらい
-
-
+りたちも とおくに とばされました。 - 
+「わははは...。だれも わしの 力に」 
+は かなうまい。この空で 「ばんな 
+のは わしだ!」
 ```
 ![](https://i.ibb.co/Z2LyPzg/8.jpg =300x)
 ```js
@@ -50,5 +49,5 @@ draft: false
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwMTA0NzA2Ml19
+eyJoaXN0b3J5IjpbMzE4MTQ5OTU1XX0=
 -->
