content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -46,8 +46,17 @@ draft: false
 びと
 
 ```
+```js
+「ああ... あついなあ。」
+たび人は ふくを ぬいで、 川に とびこんでしまいました。 
+「むりやり ふくをぬがせようと しないのに わしにかてるなんて、 
+一ばんつよいのは きみだよ。」
+きたかぜはいばったことを た いようにあやまりました。
+
+```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODEwMjAxNDA1LC0xNDAwMzM2MTVdfQ==
+eyJoaXN0b3J5IjpbLTI5NjQ0NzkzNyw4MTAyMDE0MDUsLTE0MD
+AzMzYxNV19
 -->
