content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -29,7 +29,8 @@ draft: false
 したほうが
 
 かちだ。」 「うん。きみから はじめて いいよ。」
-ビュー! きたかぜは たび人の マントを とばそうと、
+ビュー! きたかぜは たび人の 
+マントを とばそうと、
 かぜを ふき つけます。あわててたび人は手で
 マントをしっかりとおさえました。
 
@@ -40,24 +41,32 @@ draft: false
 「きたかぜは
 ますます。
 つよくふきました。
-でも、せなかを まるめた たび人の マントをぬがす。 
-ことが、どうしても できません。 「こんどは ぼくの ばんだよ。」
-たいようがあたたかい ひかりで たび人を あたためはじめました。
+でも、せなかを まるめた 
+たび人の マントをぬがす。 
+ことが、どうしても できません。 
+「こんどは ぼくの ばんだよ。」
+たいようがあたたかい ひかりで 
+たび人を あたためはじめました。
 びと
 
+
+일본어 11
 ```
 ![](https://i.ibb.co/g9CnQp0/11.jpg =250x)
 ```js
 「ああ... あついなあ。」
-たび人は ふくを ぬいで、 川に とびこんでしまいました。 
-「むりやり ふくをぬがせようと しないのに わしにかてるなんて、 
+たび人は ふくを ぬいで、 
+川に とびこんでしまいました。 
+「むりやり ふくをぬがせようと 
+しないのに わしにかてるなんて、 
 一ばんつよいのは きみだよ。」
-きたかぜはいばったことを た いようにあやまりました。
+きたかぜはいばったことを た 
+いように あやまりました。
 
 ```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY4NTc3Mjk5Myw4MTAyMDE0MDUsLTE0MD
-AzMzYxNV19
+eyJoaXN0b3J5IjpbOTM0MzgzNDkxLDgxMDIwMTQwNSwtMTQwMD
+MzNjE1XX0=
 -->
