content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -27,11 +27,11 @@ draft: false
 「あの男を
 はだかに
 したほうが
-
-かちだ。」 「うん。きみから はじめて いいよ。」
+かちだ。」 
+「うん。きみから はじめて いいよ。」
 ビュー! きたかぜは たび人の 
-マントを とばそうと、
-かぜを ふき つけます。あわててたび人は手で
+マントを とばそうと、かぜを ふき
+つけます。あわててたび人は手で
 マントをしっかりとおさえました。
 
 ```
@@ -67,6 +67,6 @@ draft: false
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTM0MzgzNDkxLDgxMDIwMTQwNSwtMTQwMD
-MzNjE1XX0=
+eyJoaXN0b3J5IjpbLTk3NTM1NDM5MSw4MTAyMDE0MDUsLTE0MD
+AzMzYxNV19
 -->
