content/blog/히라카나/きたかぜとたいよう.md updated from https://stackedit.io/

--- a/content/blog/히라카나/きたかぜとたいよう.md
+++ b/content/blog/히라카나/きたかぜとたいよう.md
@@ -20,7 +20,8 @@ draft: false
 すると、 、 たいようが
 しずかに いいました。 「うん。きみの 力は すごい。 
 でも、一ばんとはおもわないよ。」 「じゃあ、力くらべだ!」
-ちょうど のはらの 一本みちを たび人が やってくるのが 見えました。
+ちょうど のはらの 一本みちを たび人が やってくるのが 
+見えました。
 ```
 ![](https://i.ibb.co/82HpJXc/9.jpg =250x)
 ```js
@@ -67,6 +68,6 @@ draft: false
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3NTM1NDM5MSw4MTAyMDE0MDUsLTE0MD
-AzMzYxNV19
+eyJoaXN0b3J5IjpbMTA3MzQzNzY5MSwtOTc1MzU0MzkxLDgxMD
+IwMTQwNSwtMTQwMDMzNjE1XX0=
 -->
